# rca-analyzer

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  Start Back&Front.txt  alembic.ini  apply-p14.ps1  apply-p18-19-8.ps1  docker-compose.yml  expanded_incident_v2.patch  p16-only.patch  package-lock.json  pyproject.toml  roadmap_update.mbox  stage4_pdf_and_cleanup.mbox  start-rca.bat  start.bat  stop-rca.bat
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial.py  002_fix_varchar_lengths.py  003_add_users.py  004_add_refresh_tokens.py  005_add_user_role.py  006_add_docx_extraction_cache.py  007_add_result_embeddings.py  008_add_analysis_sessions.py  009_add_incident_hash.py  010_fix_old_session_data.py  011_add_llm_settings.py  012_add_llm_provenance.py  013_expand_llm_generated_ids.py  014_add_account_lockout_fields.py  015_sync_incident_field_lengths.py  016_add_docx_cache_incident_hash.py  017_add_providers_table.py  018_add_provider_models_table.py  019_add_model_preferences.py  020_add_balance_and_transactions.py
configs/prompts/: bowtie.j2  five_why.j2  fta.j2  ishikawa.j2  rca_systemic.j2  verifier.j2
dev/: test_upload.sh
docs/: architecture.md  audit-2026-06-25.md  audit-2026-06-30.md  code-quality-audit.md  contracts.md  conventions.md  memory-capsule.md  methodologies.md  p17-llm-conductor-plan.md  refactoring-plan-sse-db.md  roadmap.md  state.md  ui-state-analysis.md  user-feedback-backlog.md
docs/guidelines/: karpathy-guidelines.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vitest.config.js
frontend/prototypes/: similar-incidents-prototypes.html
frontend/src/: App.css  App.jsx  api.js  index.css  main.jsx  tailwind-compat.css
frontend/src/__tests__/: App.test.jsx  Button.test.jsx  Card.test.jsx  smoke.test.jsx
frontend/src/components/: AdminPage.css  AdminPage.jsx  AnalysisProgress.css  AnalysisProgress.jsx  AnalysisSteps.css  AnalysisSteps.jsx  AuthPage.css  AuthPage.jsx  BowtieDiagram.css  BowtieDiagram.jsx  CompareView.css  CompareView.jsx  ErrorBoundary.jsx  FiveWhySummary.css  FiveWhySummary.jsx  FiveWhyTree.jsx  (+17 more)
scripts/: createsuperuser.py  set_role.py  verify_established_facts.py
src/: __init__.py
src/api/: app.py
src/auth/: cookies.py  csrf.py  models.py  router.py  seed.py  service.py
src/db/: __init__.py  base.py  cache_repository.py  llm_settings_repository.py  orm_models.py  repository.py
src/domain/: __init__.py  models.py
src/services/: analysis_persistence_service.py  analysis_service.py  docx_cache_service.py  docx_extractor.py  docx_fields_service.py  embedding_service.py  export_service.py  llm_conductor.py  pdf_export_service.py  prompt_renderer.py  wallet_service.py
tests/: conftest.py
tests/api/: test_admin.py  test_admin_llm_settings.py  test_admin_openrouter_models.py  test_analyze_multi_stream.py  test_analyze_router.py  test_analyze_stream.py  test_csrf.py  test_csrf_e2e.py  test_roles.py  test_sessions.py  test_similar_incidents.py
tests/contracts/: test_models.py
tests/integration/: test_methodologies_e2e.py
tests/unit/: test_analysis_service.py  test_analysis_session.py  test_cache_repository.py  test_compare.py  test_cookie_kwargs.py  test_docx_fields_service.py  test_embedding_quality.py  test_embedding_service.py  test_five_why.py  test_fta.py  test_hf_local_embeddings.py  test_ishikawa.py  test_llm_conductor.py  test_openrouter.py  test_openrouter_client.py  test_openrouter_embeddings.py  test_pdf_export_service.py  test_prompt_renderer.py  test_rca_systemic.py
(+47 files in other folders)
