[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "rca-analyzer"
version = "0.4.0"
description = "Automatic Root Cause Analysis for industrial incidents via LLM"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic[email]>=2.7",
    "jinja2>=3.1",
    "tenacity>=8.3",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "python-dotenv>=1.0",
    "python-docx>=1.1",
    "python-multipart>=0.0.9",
    "fpdf2>=2.7",
    "pgvector>=0.4",
]

[project.optional-dependencies]
# Локальные HF-эмбеддинги (EMBEDDINGS_PROVIDER=huggingface).
# torch ставится CPU-версией: pip install torch --index-url https://download.pytorch.org/whl/cpu
embeddings = [
    "torch>=2.2",
    "transformers>=4.40",
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
    "aiosqlite>=0.20",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "slow: медленные тесты (реальные HF-модели); запускать: pytest -m slow",
]
addopts = "-m 'not slow'"
testpaths  = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
exclude = ["tests/"]
